--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -9,128 +9,12 @@ $boxShadow: #b9d5d999;
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
-* {
-    margin: 0;
-    font-size: 18px;
-    font-weight: normal;
-    text-decoration: none;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-    font-family: Roboto;
-}
-
-button {
-    cursor: pointer;
-    border: 0;
-    background: none;
-    outline: none;
-}
-input {
-    border: 0;
-    outline: none;
-}
-body {
-    background-color: #f6f9fa;
-}
-
 @mixin tr {
     transition: all 0.3s ease;
 }
 
 .header-hero {
     position: relative;
-}
-
-.logo {
-    width: 108px;
-    height: 83px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    &-title {
-        color: $secondary;
-        font-weight: 500;
-        font-size: 34.83px;
-        line-height: 41px;
-        letter-spacing: 2px;
-    }
-    &-container {
-        display: flex;
-        flex-direction: row;
-    }
-    &-icon {
-        margin-left: 5px;
-    }
-}
-
-.nav {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    column-gap: 52px;
-    margin-left: 53px;
-    &-link {
-        font-family: Roboto Mono;
-        font-weight: 500;
-        color: $tertiary;
-        text-transform: uppercase;
-        line-height: 40px;
-        @include tr;
-        &:hover {
-            color: $secondary;
-            border-bottom: 2px solid;
-        }
-        &:first-child {
-            border-bottom: 2px solid;
-        }
-    }
-}
-
-.header {
-    background: $primary;
-    min-height: 110px;
-    display: flex;
-    padding: 0 90px 0 220px;
-    align-items: center;
-    position: relative;
-
-    &-container {
-        display: flex;
-        flex-direction: row;
-        position: absolute;
-        right: 90px;
-        max-width: 500px;
-        &__input {
-            background: $tertiary;
-            display: none;
-        }
-        &__search {
-            width: 32px;
-            height: 32px;
-            background-image: url(../../assets/icons/search.svg);
-        }
-        &__login {
-            text-transform: uppercase;
-            color: $tertiary;
-            margin: 0 18px 0 50px;
-            @include tr;
-            &:hover {
-                color: $secondary;
-            }
-        }
-        &__signup {
-            text-transform: uppercase;
-            color: $tertiary;
-            border: 1px solid #c5e1e6;
-            border-radius: 100px;
-            @include tr;
-            &:hover {
-                background: $tertiary;
-                color: $secondary;
-                box-shadow: 0px 2px 50px $boxShadow;
-            }
-        }
-    }
 }
 
 .hero {
@@ -238,6 +122,10 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        @include tr;
+        &:hover {
+            transform: rotate(360deg);
+        }
         &__img {
             position: absolute;
         }
@@ -290,8 +178,7 @@ body {
             margin: 5px 18px 0 0;
         }
         &:hover::before {
-            content: url(../../assets/icons/re.png);
-            margin: 5px 8px 0 0;
+            content: url(../../assets/icons/heart.png);
         }
         &:hover {
             background: #19707d;
@@ -308,7 +195,7 @@ body {
         grid-template-columns: repeat(3, 1fr);
         &__card {
             width: 480px;
-            box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.06);
+            box-shadow: 0px 2px 30px #0000000f;
             &-top {
                 height: 273px;
                 background: #fff;
@@ -406,6 +293,7 @@ body {
             background: #fff;
             box-shadow: 0px 2px 50px $boxShadow;
             border-radius: 100px;
+            @include tr;
             &-1 {
                 background: url(../../assets/icons/money.svg) no-repeat center #fff;
             }
@@ -414,6 +302,9 @@ body {
             }
             &-3 {
                 background: url(../../assets/icons/happy.svg) no-repeat center #fff;
+            }
+            &:hover {
+                transform: rotate(360deg);
             }
         }
         &__text {
@@ -469,8 +360,12 @@ body {
             color: #fff;
             box-shadow: 0 0px 80px #b8b8b8;
         }
-        &__icon {
+        &::before {
+            content: url(../../assets/icons/message.svg);
             margin-right: 16px;
+        }
+        &:hover::before {
+            content: url(../../assets/icons/message.png);
         }
     }
     &-container {
@@ -536,29 +431,10 @@ body {
     &-img {
         width: 76px;
         height: 73px;
-    }
-}
-
-.footer {
-    padding-left: 220px;
-    background: #196469;
-    min-height: 200px;
-    display: flex;
-    align-items: center;
-    position: relative;
-    &-container {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        right: 92px;
-        bottom: 57px;
-    }
-    &-author {
-        font-size: 16px;
-        line-height: 19px;
-        letter-spacing: 1px;
-        text-align: right;
-        text-transform: uppercase;
-        color: #ffffff;
+        @include tr;
+        &:hover {
+            opacity: 0.7;
+            transform: rotate(360deg);
+        }
     }
 }
