--- a/pages/zoos-pandas/style.css
+++ b/pages/zoos-pandas/style.css
@@ -14,19 +14,33 @@
           align-items: center;
 }
 
+.aside-link__bg {
+  position: absolute;
+  z-index: 0;
+  display: none;
+}
+
 .aside-link__img {
   width: 76px;
+  z-index: 1;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
 .aside-link__img:hover {
-  -webkit-filter: drop-shadow(-10px 2px 5px #2a8086);
-          filter: drop-shadow(-10px 2px 5px #2a8086);
+  opacity: 0.6;
 }
 
 .aside-container {
   width: 105px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 10px;
 }
 
 .aside-container:not(:first-child) {
@@ -94,8 +108,18 @@
   margin-right: 25px;
 }
 
+.maincam-card__btn:first-child:hover {
+  background: #c5e1e5 url(../../assets/icons/i.svg) center no-repeat;
+  border-radius: 20px;
+}
+
 .maincam-card__btn:last-child {
   background: url(../../assets/icons/Bttn.svg) center no-repeat;
+}
+
+.maincam-card__btn:last-child:hover {
+  background: #c5e1e5 url(../../assets/icons/Bttn.svg) center no-repeat;
+  border-radius: 20px;
 }
 
 .maincam-subtitle {
@@ -155,14 +179,28 @@
 
 .sidecam-container__listener-btn {
   width: 52px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.sidecam-container__listener-btn:hover {
+  border-radius: 50px;
 }
 
 .sidecam-container__listener-btn:first-child {
   background: url(../../assets/icons/next.svg) no-repeat center;
 }
 
+.sidecam-container__listener-btn:first-child:hover {
+  background: #c5e1e5 url(../../assets/icons/next.svg) no-repeat center;
+}
+
 .sidecam-container__listener-btn:last-child {
   background: url(../../assets/icons/perv.svg) no-repeat center;
+}
+
+.sidecam-container__listener-btn:last-child:hover {
+  background: #c5e1e5 url(../../assets/icons/perv.svg) no-repeat center;
 }
 
 .information {
