--- a/pages/zoos-pandas/style.scss
+++ b/pages/zoos-pandas/style.scss
@@ -19,16 +19,25 @@ $boxShadow: #b9d5d999;
         display: flex;
         justify-content: center;
         align-items: center;
+        &__bg {
+            position: absolute;
+            z-index: 0;
+            display: none;
+        }
         &__img {
             width: 76px;
+            z-index: 1;
             @include tr;
             &:hover {
-                filter: drop-shadow(-10px 2px 5px $primary);
+                opacity: 0.6;
             }
         }
     }
     &-container {
         width: 105px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
         &:not(:first-child) {
             margin-top: 40px;
         }
@@ -73,9 +82,17 @@ $boxShadow: #b9d5d999;
             &:first-child {
                 background: url(../../assets/icons/i.svg) center no-repeat;
                 margin-right: 25px;
+                &:hover {
+                    background: $tertiary url(../../assets/icons/i.svg) center no-repeat;
+                    border-radius: 20px;
+                }
             }
             &:last-child {
                 background: url(../../assets/icons/Bttn.svg) center no-repeat;
+                &:hover {
+                    background: $tertiary url(../../assets/icons/Bttn.svg) center no-repeat;
+                    border-radius: 20px;
+                }
             }
         }
     }
@@ -117,11 +134,21 @@ $boxShadow: #b9d5d999;
             height: 104px;
             &-btn {
                 width: 52px;
+                @include tr;
+                &:hover {
+                    border-radius: 50px;
+                }
                 &:first-child {
                     background: url(../../assets/icons/next.svg) no-repeat center;
+                    &:hover {
+                        background: $tertiary url(../../assets/icons/next.svg) no-repeat center;
+                    }
                 }
                 &:last-child {
                     background: url(../../assets/icons/perv.svg) no-repeat center;
+                    &:hover {
+                        background: $tertiary url(../../assets/icons/perv.svg) no-repeat center;
+                    }
                 }
             }
         }
