--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+.nav-link:nth-child(1) {
+  border-bottom: 2px solid;
+}
+
 .header-hero {
   position: relative;
 }
@@ -612,444 +616,5 @@
   opacity: 0.7;
   -webkit-transform: rotate(360deg);
           transform: rotate(360deg);
-}
-
-.btn-close {
-  position: absolute;
-  border-radius: 0 20px 0 0;
-  right: 0;
-  top: 0;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.btn-close:hover {
-  background: #ff000059;
-}
-
-#contact {
-  display: none;
-  -webkit-box-shadow: 0 0 500px #2d2d2d;
-          box-shadow: 0 0 500px #2d2d2d;
-  padding: 45px 60px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background: #fff;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 20px;
-  z-index: 5;
-}
-
-#contact-title {
-  font-family: Rubik;
-  font-size: 24px;
-  line-height: 28px;
-  text-transform: uppercase;
-  color: #0d444d;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-}
-
-#contact-form {
-  margin-top: 26px;
-  row-gap: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#contact-card {
-  row-gap: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#contact-card__subtitle {
-  font-size: 14px;
-  line-height: 16px;
-  text-transform: uppercase;
-  color: #0d444d;
-}
-
-#contact-card__input {
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  width: 448px;
-  height: 54px;
-  text-indent: 20px;
-}
-
-#contact-card__input-big {
-  text-indent: 20px;
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  width: 448px;
-  height: 264px;
-}
-
-#contact-btn {
-  margin-top: 32px;
-}
-
-#feedback {
-  display: none;
-  -webkit-box-shadow: 0 0 500px #2d2d2d;
-          box-shadow: 0 0 500px #2d2d2d;
-  padding: 45px 60px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background: #fff;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 20px;
-  z-index: 5;
-}
-
-#feedback-title {
-  font-family: Rubik;
-  font-size: 24px;
-  line-height: 28px;
-  text-transform: uppercase;
-  color: #0d444d;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-}
-
-#feedback-form {
-  margin-top: 26px;
-  row-gap: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#feedback-card {
-  row-gap: 8px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#feedback-card__subtitle {
-  font-size: 14px;
-  line-height: 16px;
-  text-transform: uppercase;
-  color: #0d444d;
-}
-
-#feedback-card__input {
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  width: 448px;
-  height: 54px;
-  text-indent: 20px;
-}
-
-#feedback-card__input-big {
-  text-indent: 20px;
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  width: 448px;
-  height: 264px;
-}
-
-#feedback-btn {
-  margin-top: 32px;
-}
-
-.text-error {
-  color: #ff0000bb;
-  font-style: italic;
-  display: none;
-}
-
-.send-btn {
-  background: #2a8086;
-  -webkit-box-shadow: 0px 2px 20px #b9d5d999;
-          box-shadow: 0px 2px 20px #b9d5d999;
-  border-radius: 20px;
-  width: 448px;
-  height: 54px;
-  color: #fafafa;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  font-size: 18px;
-  line-height: 24px;
-  font-family: Roboto Mono;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.send-btn:hover {
-  background: none;
-  border: 2px solid #2a8086;
-  color: #2a8086;
-}
-
-#donate {
-  display: none;
-  -webkit-box-shadow: 0 0 500px #2d2d2d;
-          box-shadow: 0 0 500px #2d2d2d;
-  max-width: 568px;
-  padding: 45px 60px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  background: #fafafa;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 20px;
-  z-index: 5;
-}
-
-#donate-title {
-  font-family: Rubik;
-  font-size: 24px;
-  line-height: 28px;
-  text-transform: uppercase;
-  color: #0d444d;
-  -ms-flex-item-align: start;
-      -ms-grid-row-align: start;
-      align-self: start;
-}
-
-#donate-text {
-  font-style: italic;
-  font-size: 16px;
-  line-height: 19px;
-  color: #2d2d2d;
-  margin-top: 32px;
-  max-width: 448px;
-}
-
-#donate-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  row-gap: 24px;
-  margin-top: 20px;
-}
-
-#donate-payments__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 16px;
-}
-
-#donate-payments__card-btn {
-  width: 50%;
-  height: 54px;
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  border: 1px solid #19707d;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-#donate-payments__card-btn:first-child {
-  border-radius: 10px 0 0 10px;
-  background: #19707d;
-  color: #fff;
-}
-
-#donate-payments__card-btn:last-child {
-  border-radius: 0 10px 10px 0;
-  color: #19707d;
-}
-
-#donate-payments__card-btn:not(:nth-child(1)):hover {
-  background: #19707d;
-  color: #fff;
-}
-
-#donate-payments__btn {
-  width: 74px;
-  border: 1px solid #19707d;
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  height: 54px;
-  font-size: 16px;
-  line-height: 19px;
-  text-align: center;
-  color: #19707d;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-#donate-payments__btn:nth-child(3) {
-  background: #19707d;
-  color: #fff;
-}
-
-#donate-payments__btn:not(:nth-child(3)):hover {
-  background: #19707d;
-  color: #fff;
-}
-
-#donate-card {
-  position: relative;
-  margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-#donate-card__subtitle {
-  margin-bottom: 8px;
-  font-size: 14px;
-  line-height: 16px;
-  text-transform: uppercase;
-  color: #0d444d;
-}
-
-#donate-card__input {
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  width: 448px;
-  height: 54px;
-  text-indent: 20px;
-}
-
-#donate-card__pay {
-  -webkit-box-shadow: 0px 2px 30px #0000000f;
-          box-shadow: 0px 2px 30px #0000000f;
-  border-radius: 10px;
-  margin: 8px 0 24px;
-  height: 54px;
-  width: 100%;
-  background: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#donate-card__pay-container-1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 16px;
-  -webkit-column-gap: 16px;
-          column-gap: 16px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#donate-card__pay-container-2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  justify-self: end;
-}
-
-#donate-card__pay-input {
-  max-width: 40px;
-}
-
-#donate-card__pay-input::-webkit-outer-spin-button, #donate-card__pay-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-#donate-card__pay-input-1::-webkit-outer-spin-button, #donate-card__pay-input-1::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-#donate-card__icons {
-  width: 100px;
-  margin-left: auto;
-  right: 0;
-  top: 0;
-}
-
-#donate-ps {
-  margin-top: 14px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-column-gap: 15px;
-          column-gap: 15px;
-}
-
-#donate-ps__text {
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
-  color: #2d2d2d;
 }
 /*# sourceMappingURL=style.css.map */
