--- a/pages/map/style.css
+++ b/pages/map/style.css
@@ -1,6 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,regular,500,600,700,100italic,200italic,300italic,italic,500italic,600italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,600,700,800,900,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+.nav-link:nth-child(2) {
+  border-bottom: 2px solid;
+}
+
 .map {
   background: #2a8086;
   display: -webkit-box;
