--- a/pages/map/style.scss
+++ b/pages/map/style.scss
@@ -13,6 +13,10 @@ $boxShadow: #b9d5d999;
     transition: all 0.3s ease;
 }
 
+.nav-link:nth-child(2) {
+    border-bottom: 2px solid;
+}
+
 .map {
     background: $primary;
     display: flex;
