--- a/assets/others/others.scss
+++ b/assets/others/others.scss
@@ -470,3 +470,126 @@ body {
         }
     }
 }
+
+.register {
+    display: none;
+    box-shadow: 0 0 500px #2d2d2d;
+    max-width: 568px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fafafa;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    z-index: 5;
+    &-header {
+        background-color: $primary;
+        border-radius: 20px 20px 0 0;
+        display: flex;
+        height: 125px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+    &-main {
+        padding: 32px 60px 46px 60px;
+    }
+    &-togglers {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        height: 40px;
+
+        &__btn {
+            height: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            font-size: 18px;
+            line-height: 21px;
+            text-transform: uppercase;
+            color: $secondary;
+            &-dark {
+                border-bottom: 4px solid $primary;
+            }
+            &-light {
+                border-bottom: 4px solid $tertiary;
+            }
+        }
+    }
+    &-loginThrough {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 20px;
+        padding: 32px 0;
+        &__btn {
+            column-gap: 15px;
+            height: 54px;
+            background: #fff;
+            box-shadow: 0px 2px 30px #0000000f;
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            line-height: 19px;
+            color: #2d2d2d;
+        }
+    }
+    &-container {
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+    }
+    &-card {
+        display: flex;
+        flex-direction: column;
+        &__subtitle {
+            margin-bottom: 8px;
+            font-size: 14px;
+            line-height: 16px;
+            text-transform: uppercase;
+            color: $secondary;
+        }
+        &__input {
+            box-shadow: 0px 2px 30px #0000000f;
+            border-radius: 10px;
+            width: 448px;
+            height: 54px;
+            text-indent: 20px;
+        }
+    }
+    &-agreement {
+        padding: 30px 0;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        column-gap: 20px;
+        &__checkbox {
+            width: 22px;
+            height: 22px;
+        }
+        &__text {
+            font-size: 16px;
+            line-height: 29px;
+            color: #2d2d2d;
+            &-link {
+                color: #2d2d2d;
+                text-decoration: underline;
+            }
+        }
+    }
+    &-btn {
+        margin-top: 20px;
+    }
+}
+
+#login {
+    top: 40.5%;
+}
+
+.login-btn {
+    margin-top: 30px;
+}
